--- a/TalkRoomDemo.EntityLayer/TalkRoomDemo.EntityLayer.csproj
+++ b/TalkRoomDemo.EntityLayer/TalkRoomDemo.EntityLayer.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TalkRoomDemo.DtoLayer\TalkRoomDemo.DtoLayer.csproj" />
+  </ItemGroup>
+
 </Project>
