SignalR Connection Online-Offline situation make in build

--- a/TalkRoomDemo.PresentationLayer/TalkRoomDemo.PresentationLayer.csproj
+++ b/TalkRoomDemo.PresentationLayer/TalkRoomDemo.PresentationLayer.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="8.9.0" />
+    <PackageReference Include="MemuraiDeveloper" Version="4.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
@@ -21,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.58" />
     <PackageReference Include="System.Text.Json" Version="8.0.6" />
   </ItemGroup>
 
