--- a/TalkRoomDemo.DtoLayer/TalkRoomDemo.DtoLayer.csproj
+++ b/TalkRoomDemo.DtoLayer/TalkRoomDemo.DtoLayer.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="8.9.0" />
+    <PackageReference Include="MemuraiDeveloper" Version="4.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.18">
       <PrivateAssets>all</PrivateAssets>
